Added a css tricks page, and a image float left with list trick.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
   <head>
     <title>Browser bugs</title>
@@ -12,6 +12,7 @@
   	</style>
   </head>
 <body>
+<p><a href="css-trix.html">See CSS tricks &raquo;</a></p>
 
   <h1>IE7-8</h1>
   <h4>Input's have a different default width.</h4>
